fix/small fixes to farmers