@@ -52,7 +52,7 @@ public class FillWaterskins implements Action {
         }
         if(routePoints!=null)
         {
-            new RoutePointNavigator(routePoints.getLast()).run(NUtils.getGameUI());
+            new RoutePointNavigator(routePoints.get(routePoints.size() - 1)).run(NUtils.getGameUI());
             area = nArea.getRCArea();
         }
         Gob target = null;
